--- a/lambda/infra_api_rest.yml
+++ b/lambda/infra_api_rest.yml
@@ -23,6 +23,11 @@ Resources:
     Properties:
       Name: !Sub "${Stage} - moreDraw - REST"
       StageName: !Ref Stage  # Propriedade obrigatória adicionada
+      Cors:
+        AllowMethods: "'DELETE,GET,HEAD,OPTIONS,PATCH,POST,PUT'"
+        AllowHeaders: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
+        AllowOrigin: "'*'"
+
 
   HttpApi:
     Type: AWS::Serverless::HttpApi
