Ajustado,agora salva as imagens e projetos

--- a/lambda/configuration/src/main/resources/bundle.properties
+++ b/lambda/configuration/src/main/resources/bundle.properties
@@ -317,3 +317,11 @@ PostTO= trasnport order successfully created.
 FoundTO=Found trasnport order
 
 EXISTSTORLOC=Exist Storloc
+
+PostImage= Create Image
+ListImage= List all Image
+PutImage= Modify Image
+Image= Image successfully captured
+ImageNotFound= Image not found
+PostImagePic= Upload Image picture
+DeleteImage= Delete Image
