Ajustado salvamento de arquivo image no S3

--- a/lambda/image/post_image/pom.xml
+++ b/lambda/image/post_image/pom.xml
@@ -34,6 +34,12 @@
             <artifactId>hibernate-core</artifactId>
             <version>6.5.2.Final</version>
         </dependency>
+        <dependency>
+            <groupId>com.moreDraw</groupId>
+            <artifactId>configuration_bucketS3</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
