--- a/lambda/infra_api_rest.yml
+++ b/lambda/infra_api_rest.yml
@@ -27,6 +27,9 @@ Resources:
         AllowMethods: "'DELETE,GET,HEAD,OPTIONS,PATCH,POST,PUT'"
         AllowHeaders: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
         AllowOrigin: "'*'"
+      BinaryMediaTypes:
+        - "multipart/form-data"
+        - "image/*"
 
 
   HttpApi:
